unpackaged/main/default/objects/Application__c/fields/Evidence_Approved_By_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Approved_By_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Certification review - are you satisfied with the evidence the member has submitted? If not, please complete the relevant rejection fields above.</inlineHelpText>
    <label>Evidence Approved By (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications8</relationshipName>
    <type>Lookup</type>
</CustomField>