unpackaged/main/default/objects/Application__c/fields/Evidence_Approved_By_Certifier_Date__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Approved_By_Certifier_Date__c</fullName>
    <label>Evidence Approved By (Certifier) Date</label>
    <type>Date</type>
</CustomField>