unpackaged/main/default/objects/Application__c/fields/Evidence_Approved_By_Office__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Approved_By_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Administrative review - has the member submitted all corrective evidence?</inlineHelpText>
    <label>Evidence Approved By (Office)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications6</relationshipName>
    <type>Lookup</type>
</CustomField>