unpackaged/main/default/objects/Application__c/fields/Evidence_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Deadline__c</fullName>
    <description>The date by which evidence needs to be submitted.</description>
    <inlineHelpText>The date by which evidence needs to be submitted.</inlineHelpText>
    <label>Evidence Deadline</label>
    <type>Date</type>
</CustomField>