unpackaged/main/default/objects/Application__c/fields/Evidence_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop 2 Week Evidence Reminder</label>
    <type>Checkbox</type>
</CustomField>