unpackaged/main/default/objects/Application__c/fields/Evidence_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Received_Date__c</fullName>
    <label>Evidence Received Date</label>
    <type>Date</type>
</CustomField>