unpackaged/main/default/objects/Application__c/fields/Evidence_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Reminder_Date__c</fullName>
    <formula>Evidence_Deadline__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evidence Reminder Date</label>
    <type>Date</type>
</CustomField>