unpackaged/main/default/objects/Application__c/fields/Evidence_Required__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Required__c</fullName>
    <label>Evidence Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>