unpackaged/main/default/objects/Application__c/fields/Extension_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Extension_Deadline__c</fullName>
    <label>Extension Deadline</label>
    <type>Date</type>
</CustomField>