unpackaged/main/default/objects/Application__c/fields/Extension_Granted__c.field-meta.xml
<CustomField>
    <fullName>Extension_Granted__c</fullName>
    <label>Extension Granted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>