unpackaged/main/default/objects/Application__c/fields/Extension_Granted_By__c.field-meta.xml
<CustomField>
    <fullName>Extension_Granted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extension Granted By Certifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications9</relationshipName>
    <type>Lookup</type>
</CustomField>