unpackaged/main/default/objects/Application__c/fields/Extension_Granted_On__c.field-meta.xml
<CustomField>
    <fullName>Extension_Granted_On__c</fullName>
    <description>The date that the extension was granted on.</description>
    <inlineHelpText>The date that the extension was granted on.</inlineHelpText>
    <label>Extension Granted On</label>
    <type>Date</type>
</CustomField>