unpackaged/main/default/objects/Application__c/fields/Extension_Period__c.field-meta.xml
<CustomField>
    <fullName>Extension_Period__c</fullName>
    <description>Auto-populates Extension Deadline field with date, based on number of weeks from the original deadline date</description>
    <label>Extension Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Extension_Granted__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>3 Weeks</fullName>
            </value>
            <value>
                <fullName>4 Weeks</fullName>
            </value>
            <value>
                <fullName>5 Weeks</fullName>
            </value>
            <value>
                <fullName>6 Weeks</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>