unpackaged/main/default/objects/Application__c/fields/Extension_Request__c.field-meta.xml
<CustomField>
    <fullName>Extension_Request__c</fullName>
    <inlineHelpText>Add a link to any written request for an extension</inlineHelpText>
    <label>Extension Request</label>
    <type>Url</type>
</CustomField>