unpackaged/main/default/objects/Application__c/fields/Farmer_Rating_Not_Populated__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Rating_Not_Populated__c</fullName>
    <label>Farmer Rating Not Populated</label>
    <summaryFilterItems>
        <field>Assessments__c.Farmer_Rating__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Assessments__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>