unpackaged/main/default/objects/Application__c/fields/Final_Evidence_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Evidence_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop 21 Day Evidence Reminder</label>
    <type>Checkbox</type>
</CustomField>