unpackaged/main/default/objects/Application__c/fields/Form_Assembly_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Assembly_Response_ID__c</fullName>
    <description>Unique ID to link form assembly to application ID. DO NOT EDIT.</description>
    <inlineHelpText>Unique ID to link form assembly to application ID. DO NOT EDIT.</inlineHelpText>
    <label>Form Assembly Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>