unpackaged/main/default/objects/Application__c/fields/Further_Information__c.field-meta.xml
<CustomField>
    <fullName>Further_Information__c</fullName>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Further Information</label>
    <type>TextArea</type>
</CustomField>