unpackaged/main/default/objects/Application__c/fields/Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Head_Office__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Head Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Head Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>