unpackaged/main/default/objects/Application__c/fields/InvoiceSent__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceSent</label>
    <type>Checkbox</type>
</CustomField>