unpackaged/main/default/objects/Application__c/fields/IsCompleted_on_WOAs__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted_on_WOAs__c</fullName>
    <description>counts WOAs with IsCompleted field not checked</description>
    <label>IsCompleted on WOAs not checked</label>
    <summaryFilterItems>
        <field>WOA__c.IsCompleted__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WOA__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>