unpackaged/main/default/objects/Application__c/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <formula>Site__r.Location_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Notes</label>
    <type>Text</type>
</CustomField>