unpackaged/main/default/objects/Application__c/fields/Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiry_Date__c</fullName>
    <formula>Site__r.Membership_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>