unpackaged/main/default/objects/Application__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <formula>Site__r.Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>