unpackaged/main/default/objects/Application__c/fields/Mobile_Sync__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Sync__c</fullName>
    <formula>AND(
				OR(
								TEXT(Stage__c) = &quot;Assessment&quot;,
								TEXT(Renewal_Stage__c) = &quot;Assessment&quot;
    ),
    Cancel_Application__c = false,
				Site_Status__c = &quot;MEMBER&quot;,	
				NOT(ISNULL(Assessment_Date__c)),
				Assessor__c =  $User.Id 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Sync</label>
    <type>Checkbox</type>
</CustomField>