unpackaged/main/default/objects/Application__c/fields/MST_Comments__c.field-meta.xml
<CustomField>
    <fullName>MST_Comments__c</fullName>
    <description>Field for MST comments</description>
    <label>MST Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>