unpackaged/main/default/objects/Application__c/fields/No_of_months_since_previous_assessment__c.field-meta.xml
<CustomField>
    <fullName>No_of_months_since_previous_assessment__c</fullName>
    <formula>((YEAR(TODAY())-YEAR(Site__r.Previous_Assessment_Date__c ))*12)+(MONTH(TODAY())-MONTH( Site__r.Previous_Assessment_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of months since previous assessment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>