unpackaged/main/default/objects/Application__c/fields/No_Offences__c.field-meta.xml
<CustomField>
    <fullName>No_Offences__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I confirm that I do not have any previous convictions or pending prosecutions relating to any offence involving the care, handling, transport, slaughter or sale of animals or produce.</inlineHelpText>
    <label>No Offences</label>
    <type>Checkbox</type>
</CustomField>