unpackaged/main/default/objects/Application__c/fields/Office_Approved__c.field-meta.xml
<CustomField>
    <fullName>Office_Approved__c</fullName>
    <description>For RSPCA Assured Office to mark if the Additional Visit has been approved or not.</description>
    <inlineHelpText>For RSPCA Assured Office to mark if the Additional Visit has been approved or not.</inlineHelpText>
    <label>Office Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>