unpackaged/main/default/objects/Application__c/fields/Other_Outcome_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Other_Outcome_of_Visit__c</fullName>
    <description>Text area to populate with the outcome of the visit that is not listed on the Outcome of Visit picklist</description>
    <label>Other Outcome of Visit</label>
    <type>TextArea</type>
</CustomField>