unpackaged/main/default/objects/Application__c/fields/Other_rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>Other_rejection_reason__c</fullName>
    <description>Other rejection reason must be provided when other is selected on the reason for rejection.</description>
    <inlineHelpText>Other rejection reason must be provided when other is selected on the reason for rejection.</inlineHelpText>
    <label>Other rejection reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>