unpackaged/main/default/objects/Application__c/fields/Outcome_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Visit__c</fullName>
    <label>Outcome of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Revisit Required</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>