unpackaged/main/default/objects/Application__c/fields/Paid_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Paid_Read_Only__c</fullName>
    <formula>IF(Paid__c = true, IMAGE(&quot;/resource/ValidationCheckSmall&quot;, &#39;Paid&#39;, 24,24), IMAGE(&quot;/resource/ValidationCrossSmall&quot;, &#39;Not Paid&#39;, 24,24) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is read only and displays whether the membership fees have been paid.</inlineHelpText>
    <label>Paid (Read-Only)</label>
    <type>Text</type>
</CustomField>