unpackaged/main/default/objects/Application__c/fields/Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Passed_Date__c</fullName>
    <label>Passed Date</label>
    <type>Date</type>
</CustomField>