unpackaged/main/default/objects/Application__c/fields/Payment_Amount_Received_Card__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Received_Card__c</fullName>
    <label>Payment Amount Received (Card)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>