unpackaged/main/default/objects/Application__c/fields/Payment_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>