unpackaged/main/default/objects/Application__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BACS</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
                <isActive>false</isActive>
                <label>Card</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <isActive>false</isActive>
                <label>Cheque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>