unpackaged/main/default/objects/Application__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>Payment Reference autogenerated by salesforce.</description>
    <formula>Sage_Invoice__r.Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Reference</label>
    <type>Text</type>
</CustomField>