unpackaged/main/default/objects/Application__c/fields/Previous_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assessment_Date__c</fullName>
    <label>Previous Assessment Date</label>
    <type>Date</type>
</CustomField>