unpackaged/main/default/objects/Application__c/fields/Previous_Assessor_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assessor_Name__c</fullName>
    <label>Previous Assessor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>