unpackaged/main/default/objects/Application__c/fields/Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Id__c</fullName>
    <label>Pricebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>