unpackaged/main/default/objects/Application__c/fields/Re_visit_Fee_required__c.field-meta.xml
<CustomField>
    <fullName>Re_visit_Fee_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-visit Fee required</label>
    <type>Checkbox</type>
</CustomField>