unpackaged/main/default/objects/Application__c/fields/Reason_for_extension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_extension__c</fullName>
    <description>Reason for the deadline being extended.</description>
    <inlineHelpText>Reason for the deadline being extended.</inlineHelpText>
    <label>Reason for extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>