unpackaged/main/default/objects/Application__c/fields/Reason_for_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rejection__c</fullName>
    <description>NSF to provide their reason for rejection.</description>
    <inlineHelpText>NSF to provide their reason for rejection.</inlineHelpText>
    <label>Reason for rejection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reject__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No evidence</fullName>
            </value>
            <value>
                <fullName>Insufficient evidence</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory evidence</fullName>
            </value>
            <value>
                <fullName>Major non-compliance</fullName>
            </value>
            <value>
                <fullName>Reputational risks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>