unpackaged/main/default/objects/Application__c/fields/Reason_for_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Status__c</fullName>
    <description>Returns the value on the associated Site record</description>
    <formula>TEXT(Site__r.Reason_for_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason for Status</label>
    <type>Text</type>
</CustomField>