unpackaged/main/default/objects/Application__c/fields/Reason_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Visit__c</fullName>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Reason for Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allegation</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>