unpackaged/main/default/objects/Application__c/fields/Reject__c.field-meta.xml
<CustomField>
    <fullName>Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for NSF to reject the application.</description>
    <inlineHelpText>Checkbox for NSF to reject the application.</inlineHelpText>
    <label>Reject</label>
    <type>Checkbox</type>
</CustomField>