unpackaged/main/default/objects/Application__c/fields/Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Date__c</fullName>
    <description>Rejection Date to be auto populated when application is rejected.</description>
    <inlineHelpText>Rejection Date auto populated when application is rejected.</inlineHelpText>
    <label>Rejection Date</label>
    <type>DateTime</type>
</CustomField>