unpackaged/main/default/objects/Application__c/fields/Renewal_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Approval_Date__c</fullName>
    <label>Renewal Approval Date</label>
    <type>Date</type>
</CustomField>