unpackaged/main/default/objects/Application__c/fields/Renewal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Approval_Status__c</fullName>
    <inlineHelpText>This picklist is automatically updated based on the status of approval.</inlineHelpText>
    <label>Current Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending Office Approval</fullName>
            </value>
            <value>
                <fullName>Pending Assessor Approval</fullName>
            </value>
            <value>
                <fullName>Pending Certifier Approval</fullName>
            </value>
            <value>
                <fullName>Assessor Approved</fullName>
                <isActive>false</isActive>
                <label>Assessor Approved</label>
            </value>
            <value>
                <fullName>Office Approved</fullName>
                <isActive>false</isActive>
                <label>Office Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>