unpackaged/main/default/objects/Application__c/fields/Renewal_Approved_By_NSF__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Approved_By_NSF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Approved By (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicationsgKZj</relationshipName>
    <type>Lookup</type>
</CustomField>