unpackaged/main/default/objects/Application__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <formula>Site__r.Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>