unpackaged/main/default/objects/Application__c/fields/Renewal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Stage__c</fullName>
    <description>Stage for renewal application. This stage is used in renewal record type.</description>
    <label>Renewal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>