unpackaged/main/default/objects/Application__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Report</label>
    <type>Url</type>
</CustomField>