unpackaged/main/default/objects/Application__c/fields/Rescheduled_Assessment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Assessment_Reason__c</fullName>
    <inlineHelpText>Please provide a reason if assessment is rescheduled.</inlineHelpText>
    <label>Rescheduled Assessment Reason</label>
    <type>TextArea</type>
</CustomField>