unpackaged/main/default/objects/Application__c/fields/Reviewing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications3caV</relationshipName>
    <type>Lookup</type>
</CustomField>