unpackaged/main/default/objects/Application__c/fields/Sage_50_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_50_Transaction_Number__c</fullName>
    <label>Sage 50 Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>