unpackaged/main/default/objects/Application__c/fields/Sage_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sage Invoice</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>