unpackaged/main/default/objects/Application__c/fields/Sanction__c.field-meta.xml
<CustomField>
    <fullName>Sanction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanction</label>
    <referenceTo>Sanctions__c</referenceTo>
    <relationshipLabel>Additional Visits</relationshipLabel>
    <relationshipName>Additional_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>