unpackaged/main/default/objects/Application__c/fields/Send_Application_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Application_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Application Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>