unpackaged/main/default/objects/Application__c/fields/Send_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice</label>
    <type>Checkbox</type>
</CustomField>