unpackaged/main/default/objects/Application__c/fields/Signatory_Contact__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatory Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Signatory Contact)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>