unpackaged/main/default/objects/Application__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>ApplicationSite</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>