unpackaged/main/default/objects/Application__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <formula>Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>