unpackaged/main/default/objects/Application__c/fields/Site_needs_assessment__c.field-meta.xml
<CustomField>
    <fullName>Site_needs_assessment__c</fullName>
    <formula>Site__r.Needs_an_Assessment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site needs assessment</label>
    <type>Checkbox</type>
</CustomField>