unpackaged/main/default/objects/Application__c/fields/Site_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Notes__c</fullName>
    <formula>Site__r.Site_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Notes</label>
    <type>Text</type>
</CustomField>