unpackaged/main/default/objects/Application__c/fields/Site_Notes_Update__c.field-meta.xml
<CustomField>
    <fullName>Site_Notes_Update__c</fullName>
    <label>Site Notes Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>