unpackaged/main/default/objects/Application__c/fields/Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone__c</fullName>
    <formula>Site__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Phone</label>
    <type>Text</type>
</CustomField>