unpackaged/main/default/objects/Application__c/fields/Site_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Site_Postcode__c</fullName>
    <formula>Site__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Postcode</label>
    <type>Text</type>
</CustomField>