unpackaged/main/default/objects/Application__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <formula>TEXT( Site__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Status</label>
    <type>Text</type>
</CustomField>