unpackaged/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage field for new applications for new site, update, or transfers. This field is used for the application record type.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
                <default>true</default>
                <label>Application</label>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>