unpackaged/main/default/objects/Application__c/fields/Status_Approved__c.field-meta.xml
<CustomField>
    <fullName>Status_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box checked manually by a user which auto-populates the read-only lookup field Status Approved By.</description>
    <inlineHelpText>Once this box is checked, your user ID will automatically populate in the Status Approved By field.</inlineHelpText>
    <label>Status Approved</label>
    <type>Checkbox</type>
</CustomField>