unpackaged/main/default/objects/Application__c/fields/Status_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that approved the Status of the Additional Visit. Value automatically populated when Status Approved box is checked.</description>
    <inlineHelpText>This field will auto-populate when the Status Approved checkbox is checked.</inlineHelpText>
    <label>Status Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications4HV6</relationshipName>
    <type>Lookup</type>
</CustomField>